--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -219,6 +219,20 @@
           width: 100%;
         }
 
+        & .reset-filters {
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 22px;
+          color: #7C8589;
+
+          @media(max-width: 992px) {
+            font-size: 14px;
+            font-style: normal;
+            line-height: 22px;
+          }
+        }
+
         & .filters-result {
           font-size: 18px;
           font-style: normal;
@@ -317,7 +331,7 @@
       backdrop-filter: blur(2px);
 
       @media(max-width: 1300px) {
-        height: 100%;
+        height: 80%;
       }
     }
 
@@ -386,7 +400,7 @@
               align-items: center;
               margin-bottom: 16px;
 
-              @media(max-width: 1420px) {
+              @media(max-width: 1860px) {
                 flex-wrap: wrap;
               }
 
@@ -404,6 +418,8 @@
                 letter-spacing: 0.56px;
                 text-transform: uppercase;
                 margin-right: 15px;
+                white-space: nowrap;
+
 
                 @media(max-width: 1700px) {
                   font-size: 22px;
@@ -430,8 +446,9 @@
                 font-weight: 400;
                 line-height: 16px;
                 position: relative;
+                white-space: nowrap;
 
-                @media(max-width: 1420px) {
+                @media(max-width: 1860px) {
                   order: 1;
                   width: 100%;
                 }
@@ -448,8 +465,13 @@
                   top: 6px;
                   transform: rotate(175deg);
 
-                  @media(max-width: 1420px) {
+                  @media(max-width: 1860px) {
                     width: 26%;
+                  }
+
+                  @media(max-width: 700px) {
+                    top: 4px;
+                    width: 34%;
                   }
                 }
               }
@@ -466,7 +488,7 @@
                 padding: 8px 10px;
                 margin-left: auto;
 
-                @media(max-width: 1420px) {
+                @media(max-width: 1860px) {
                   order: 3;
                 }
 
@@ -529,6 +551,8 @@
             display: flex;
             gap: 4px;
             flex-wrap: wrap;
+            padding-left: 20px;
+            padding-right: 20px;
 
             @media(max-width: 992px) {
               display: none;
@@ -555,7 +579,7 @@
       }
 
       @media(max-width: 992px) {
-        padding: 10px;
+        padding: 2px;
       }
 
       & a {
@@ -606,6 +630,7 @@
             position: absolute;
             bottom: -33px;
 
+
             @media(max-width: 1700px) {
               bottom: 0;
             }
@@ -631,11 +656,13 @@
               font-style: normal;
               font-weight: 500;
               line-height: 90%;
+              white-space: nowrap;
 
               @media(max-width: 1700px) {
                 font-size: 30px;
                 margin-bottom: 10px;
               }
+
               @media(max-width: 1300px) {
                 margin-bottom: 0;
               }
@@ -657,6 +684,8 @@
               order: 1;
               text-align: right;
               max-width: fit-content;
+              white-space: nowrap;
+
               @media(max-width:1300px) {
                 max-width: 100%;
                 text-align: left;
@@ -664,6 +693,18 @@
 
               @media(max-width: 700px) {
                 margin-bottom: 6px;
+              }
+
+              &::before {
+                @media(max-width: 1860px) {
+                  order: 1;
+                  width: 26%;
+                }
+
+                @media(max-width: 700px) {
+                  width: 34%;
+                  top: 4px;
+                }
               }
 
             }
@@ -793,7 +834,7 @@
           border-radius: 30px;
           background: #FF7400;
 
-          @media(max-width: 992px) {
+          @media(max-width: 600px) {
             font-size: 10px;
             font-style: normal;
             font-weight: 400;
@@ -849,6 +890,10 @@
           align-items: center;
           margin-bottom: 16px;
 
+          @media(max-width: 1860px) {
+            flex-wrap: wrap;
+          }
+
           @media(max-width: 1420px) {
             flex-wrap: wrap;
           }
@@ -866,14 +911,17 @@
             letter-spacing: 0.56px;
             text-transform: uppercase;
             margin-right: 15px;
+            white-space: nowrap;
+
+            @media(max-width: 1860px) {
+              order: 2;
+            }
 
             @media(max-width: 1700px) {
               font-size: 22px;
             }
 
-            @media(max-width: 1420px) {
-              order: 2;
-            }
+
 
             @media(max-width: 700px) {
               font-size: 14px;
@@ -890,8 +938,9 @@
             font-weight: 400;
             line-height: 16px;
             position: relative;
+            white-space: nowrap;
 
-            @media(max-width: 1420px) {
+            @media(max-width: 1860px) {
               order: 1;
               width: 100%;
             }
@@ -913,8 +962,13 @@
               top: 6px;
               transform: rotate(175deg);
 
-              @media(max-width: 1420px) {
+              @media(max-width: 1860px) {
                 width: 26%;
+              }
+
+              @media(max-width: 700px) {
+                width: 34%;
+                top: 4px;
               }
             }
           }
@@ -931,7 +985,7 @@
             padding: 8px 10px;
             margin-left: auto;
 
-            @media(max-width: 1420px) {
+            @media(max-width: 1820px) {
               order: 3;
             }
 
@@ -1108,6 +1162,10 @@
             align-items: center;
             margin-bottom: 16px;
 
+            @media(max-width: 1860px) {
+              flex-wrap: wrap;
+            }
+
             @media(max-width: 700px) {
               margin-bottom: 9px;
             }
@@ -1122,6 +1180,11 @@
               text-transform: uppercase;
               margin-right: 15px;
               font-family: 'Avenir Next Cyr';
+              white-space: nowrap;
+
+              @media(max-width: 1860px) {
+                order: 2;
+              }
 
               @media (max-width: 700px) {
                 font-size: 14px;
@@ -1138,6 +1201,11 @@
               font-weight: 400;
               line-height: 16px;
               position: relative;
+              white-space: nowrap;
+
+              @media(max-width: 1860px) {
+                order: 1;
+              }
 
               &::before {
                 content: "";
@@ -1149,8 +1217,13 @@
                 top: 6px;
                 transform: rotate(175deg);
 
-                @media(max-width: 1420px) {
+                @media(max-width: 1860px) {
                   width: 26%;
+                }
+
+                @media(max-width: 700px) {
+                  width: 34%;
+                  top: 4px;
                 }
               }
             }
@@ -1166,6 +1239,10 @@
               background: #FF7400;
               padding: 8px 10px;
               margin-left: auto;
+
+              @media(max-width: 1860px) {
+                order: 3;
+              }
 
               @media(max-width: 700px) {
                 font-size: 10px;
@@ -1273,25 +1350,55 @@
           }
 
           & .catalog-item__prices {
-
+            @media(max-width: 1860px) {
+              flex-wrap: wrap;
+            }
 
             & .catalog-item__price {
               color: #fff;
               font-weight: 500;
               font-family: "Gilroy";
+              white-space: nowrap;
+
+              @media(max-width: 1860px) {
+                order: 2;
+              }
             }
 
             & .catalog-item__old-price {
               color: #fff;
               font-weight: 500;
+              white-space: nowrap;
+
+              &::before {
+                @media(max-width: 1860px) {
+                  order: 1;
+                  width: 26%;
+                }
+
+                @media(max-width: 700px) {
+                  width: 34%;
+                  top: 4px;
+                }
+
+              }
+
+              @media(max-width: 1860px) {
+                order: 1;
+              }
 
               @media(max-width: 992px) {
                 font-size: 8px;
+
               }
             }
 
             & .catalog-item__sale {
               color: #FFF;
+
+              @media(max-width: 1860px) {
+                order: 3;
+              }
             }
           }
 
@@ -1331,6 +1438,7 @@
             }
 
             & .catalog-item__prices {
+              flex-wrap: wrap;
 
               @media(max-width: 700px) {
                 margin-bottom: 9px;
@@ -1338,15 +1446,42 @@
 
               & .catalog-item__price {
                 color: #242220;
+                white-space: nowrap;
+
+                @media(max-width: 1860px) {
+                  order: 2;
+                }
 
               }
 
               & .catalog-item__old-price {
                 color: #242220;
+                white-space: nowrap;
+
+                &::before {
+                  @media(max-width: 1860px) {
+                    order: 1;
+                    width: 26%;
+                  }
+
+                  @media(max-width: 700px) {
+                    width: 34%;
+                    top: 4px;
+                  }
+
+                }
+
+                @media(max-width: 1860px) {
+                  order: 1;
+                }
               }
 
               & .catalog-item__sale {
                 color: #fff;
+
+                @media(max-width: 1860px) {
+                  order: 3;
+                }
               }
             }
 
@@ -1503,6 +1638,7 @@
 
     @media(max-width: 992px) {
       padding: 42px 20px 10px;
+      border-radius: 10px;
     }
   }
 
@@ -1581,8 +1717,9 @@
           height: 0%;
           z-index: 2;
           width: 100%;
-          height: 34%;
+          height: 50%;
           backdrop-filter: blur(2px);
+
         }
 
         & .author-collection___item-name {
@@ -1668,9 +1805,12 @@
       margin-bottom: 80px;
       position: relative;
 
+
       @media(Max-width: 992px) {
         padding-top: 42px;
         margin-bottom: 34px;
+        padding-left: 8px;
+        padding-right: 8px;
       }
 
       @media(max-width: 1150px) {
@@ -1742,6 +1882,8 @@
     padding: 10px;
     padding-top: 42px;
     padding-bottom: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   & .last-blog__head {
@@ -1857,6 +1999,7 @@
           left: 0;
           bottom: 0;
           z-index: 2;
+          backdrop-filter: blur(2px);
         }
 
         & .last-news__item-name {
@@ -1865,7 +2008,7 @@
           color: #FFF;
           font-size: 35px;
           font-style: normal;
-          font-weight: 400;
+          font-weight: 500;
           line-height: 90%;
           margin-bottom: 1px;
           max-width: 80%;
@@ -1874,7 +2017,7 @@
           @media(max-width: 992px) {
             font-size: 20px;
             font-style: normal;
-            font-weight: 400;
+            font-weight: 500;
             line-height: 100%;
             margin-bottom: 10px;
           }
