--- a/assets/css/detail-product.css
+++ b/assets/css/detail-product.css
@@ -60,9 +60,10 @@
           flex-direction: row;
           flex-wrap: wrap;
           gap: 20px;
+          margin-bottom: 50px;
 
           @media(max-width: 600px) {
-            gap: 16px;
+            gap: 16px 0px;
             flex-direction: row;
             flex-wrap: wrap;
             margin-bottom: 40px;
@@ -182,11 +183,16 @@
       line-height: 100%;
       margin-bottom: 56px;
 
+      @media(max-width: 1600px) {
+        font-size: 22px;
+      }
+
       @media(max-width: 600px) {
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
         line-height: 100%;
+        margin-bottom: 26px;
       }
 
       /* 25px */
@@ -196,7 +202,11 @@
       display: flex;
       gap: 10px;
 
-      @media(max-width: 1750px) {
+      @media(max-width: 600px) {
+        gap: 3px;
+      }
+
+      @media(max-width: 1250px) {
         flex-direction: column;
       }
 
@@ -210,6 +220,11 @@
         padding: 20px 30px;
         max-width: fit-content;
         height: 84px;
+
+        @media(max-width: 1600px) {
+          padding: 10px 20px;
+          height: 65px;
+        }
 
         @media(max-width: 600px) {
           padding: 8px 8px 8px 20px;
@@ -227,6 +242,10 @@
           font-style: normal;
           font-weight: 700;
           line-height: 100%;
+
+          @media(max-width: 1600px) {
+            font-size: 18px;
+          }
 
           @media(max-width: 600px) {
             font-size: 14px;
@@ -250,6 +269,11 @@
         max-width: fit-content;
         height: 84px;
 
+        @media(max-width: 1600px) {
+          padding: 10px 20px;
+          height: 65px;
+        }
+
         @media(max-width: 600px) {
           padding: 8px 8px 8px 20px;
           height: 48px;
@@ -261,6 +285,10 @@
           font-style: normal;
           font-weight: 700;
           line-height: 100%;
+
+          @media(max-width: 1600px) {
+            font-size: 18px;
+          }
 
           @media(max-width: 600px) {
             font-size: 14px;
@@ -296,6 +324,10 @@
             font-style: normal;
             font-weight: 400;
             line-height: 100%;
+
+            @media(max-width: 1600px) {
+              font-size: 15px;
+            }
 
             @media(max-width: 600px) {
               font-size: 12px;
@@ -543,6 +575,10 @@
       gap: 32px;
       align-items: flex-end;
 
+      @media(max-width: 600px) {
+        gap: 20px;
+      }
+
       & h2 {}
 
       & .tab-content__similar-links {
@@ -571,7 +607,7 @@
             @media(max-width: 700px) {
               font-size: 14px;
               font-style: normal;
-              font-weight: 400;
+              font-weight: 500;
               line-height: 100%;
               padding: 6px 10px 6px 10px;
             }
@@ -653,8 +689,22 @@
   }
 }
 
+.tab-content__similar-content {}
+
 .similar-slider {
   margin-left: calc((100% - 1820px) / 2);
+
+  @media(max-width: 1850px) {
+    margin-left: 50px;
+  }
+
+  @media(max-width: 1850px) {
+    margin-left: 20px;
+  }
+
+  @media(max-width: 1850px) {
+    margin-left: 10px;
+  }
 
   @media(max-width:992px) {
     margin-left: 10px;
@@ -683,6 +733,20 @@
     padding-left: 3px;
     padding-right: 3px;
     padding-top: 3px;
+    max-width: 245px;
+  }
+
+  @media(max-width: 600px) {
+    max-width: 233px;
+  }
+  @media(max-width: 500px) {
+    max-width: 180px;
+  }
+  @media(max-width: 390px) {
+    max-width: 160px;
+  }
+   @media(max-width: 370px) {
+    max-width: 148px;
   }
 
   & .blur {
@@ -714,12 +778,16 @@
     flex-direction: column;
 
     & .catalog-item__image {
-      width: 100%;
+      /* width: 100%; */
       aspect-ratio: 1.155 / 1;
       border-radius: 11px;
       overflow: hidden;
       margin-bottom: 24px;
       position: relative;
+
+      & .splide__pagination {
+        display: flex!important;
+      }
 
       @media(max-width:992px) {
         border-radius: 16px;
@@ -744,7 +812,7 @@
         border-radius: 30px;
         background: #FF7400;
 
-        @media(max-width: 992px) {
+        @media(max-width: 600px) {
           font-size: 10px;
           font-style: normal;
           font-weight: 400;
@@ -945,6 +1013,8 @@
       display: flex;
       gap: 4px;
       flex-wrap: wrap;
+      padding-left: 20px;
+      padding-right: 20px;
 
       @media(max-width: 992px) {
         display: none;
@@ -980,7 +1050,7 @@
   width: 100%;
   height: 100dvh;
   z-index: -1;
-  filter: brightness(.6);
+  filter: brightness(.5);
 
   & img {
     object-fit: cover;
@@ -999,7 +1069,11 @@
 }
 
 .detail-products__ms {
-  height: 71.6dvh;
+  height: calc(100dvh - 400px);
+
+  /* @media(max-width: 1700px) {
+    height: auto;
+  } */
 
   @media(max-width: 992px) {
     height: 69.6dvh;
@@ -1088,6 +1162,9 @@
 
           @media(max-width: 992px) {
             left: 0;
+            width: 5px;
+            height: 5px;
+            left: 5px;
           }
         }
       }
@@ -1102,6 +1179,10 @@
       line-height: 90%;
       max-width: 900px;
       margin-bottom: 40px;
+
+      @media(max-width: 1850px) {
+        font-size: 60px;
+      }
 
       @media(max-width: 992px) {
         font-size: 30px;
@@ -1120,6 +1201,10 @@
       line-height: 100%;
       max-width: 747px;
 
+      @media(max-width: 1850px) {
+        font-size: 22px;
+      }
+
       @media(max-width: 992px) {
         font-size: 14px;
         font-style: normal;
@@ -1133,9 +1218,14 @@
       justify-content: space-between;
       align-items: flex-end;
       margin-top: auto;
-      margin-bottom: 64px;
+      /* margin-bottom: 64px; */
 
       @media(max-width: 992px) {
+        gap: 20px;
+        margin-bottom: 22px;
+      }
+
+      @media(max-width: 700px) {
         flex-direction: row-reverse;
         gap: 20px;
         margin-bottom: 22px;
@@ -1148,6 +1238,12 @@
 
         @media(max-width: 992px) {
           flex-direction: column;
+          align-items: flex-start;
+
+        }
+
+        @media(max-width: 700px) {
+          flex-direction: column;
           align-items: flex-end;
           gap: 6px;
         }
@@ -1159,8 +1255,14 @@
 
           @media(max-width: 992px) {
             flex-direction: column;
+            align-items: flex-start;
+          }
+
+          @media(max-width: 700px) {
+            flex-direction: column;
             align-items: flex-end;
           }
+
 
           &:nth-child(2) {
 
@@ -1231,6 +1333,12 @@
 
         @media(max-width: 992px) {
           gap: 3px;
+          align-items: flex-end;
+        }
+
+        @media(max-width: 700px) {
+          gap: 3px;
+          align-items: flex-start;
         }
 
         & .donwload {
@@ -1475,7 +1583,8 @@
 
 .section.product-feed {
   padding-top: 112px;
-  padding-bottom: 112px;
+  padding-bottom: 70px;
+  margin-bottom: 20px;
 
   @media(max-width: 992px) {
     padding-top: 47px;
@@ -1687,6 +1796,10 @@
               line-height: 100%;
             }
 
+            & span {
+              color: rgba(0, 0, 0, 0.40);
+            }
+
             &.small {
               color: rgba(0, 0, 0, 0.70);
               font-size: 25px;
@@ -1724,6 +1837,14 @@
 
   & h2 {
     margin-bottom: 80px;
+
+    @media(max-width: 992px) {
+      margin-bottom: 40px;
+    }
+
+    @media(max-width: 700px) {
+      margin-bottom: 26px;
+    }
   }
 
   & .plans-tabs {
@@ -1913,6 +2034,7 @@
                 padding: 5px 9px;
               }
 
+
               &.gray {
                 background: #F5F5F5;
                 padding-top: 4px;
@@ -1940,6 +2062,11 @@
                   font-size: 10px;
                   font-style: normal;
                   line-height: 100%;
+                }
+
+
+                @media(max-width: 370px) {
+                  font-size: 8px;
                 }
 
                 /* 18px */
@@ -2259,10 +2386,15 @@
         overflow: hidden;
         border-radius: 32px;
 
+        @media(max-width: 992px) {
+          border-radius: 16px;
+        }
+
         & img {
           display: flex !important;
-          max-width: 100%;
+          width: 100%;
           object-fit: cover;
+          height: 100%;
         }
 
         @media(max-width: 992px) {
@@ -2283,6 +2415,10 @@
     max-width: 593px;
     width: 100%;
     position: relative;
+
+    @media(max-width: 992px) {
+      max-width: 250px;
+    }
 
     & .splide__track {
       padding-top: 20px !important;
@@ -2340,6 +2476,12 @@
           height: 15px;
           border-radius: 50%;
           transition: all .2s ease-in;
+
+          @media(max-width: 700px) {
+            width: 7px;
+            height: 7px;
+            left: 19.9px;
+          }
         }
 
 
@@ -2373,6 +2515,12 @@
             border-radius: 50%;
             transition: all .2s ease-in;
 
+            @media(max-width: 700px) {
+              width: 23px;
+              height: 23px;
+              left: 12px;
+            }
+
           }
 
           &::after {
@@ -2386,6 +2534,12 @@
             height: 30px;
             border-radius: 50%;
             transition: all .2s ease-in;
+
+            @media(max-width: 700px) {
+              width: 14px;
+              height: 14px;
+              left: 16.5px;
+            }
           }
         }
       }
@@ -2414,6 +2568,10 @@
         flex-direction: column-reverse;
         align-items: flex-start;
         gap: 37px;
+      }
+
+      @media(max-width: 600px) {
+        gap: 12px;
       }
 
       & .point__tab-content__blur {
@@ -2562,7 +2720,7 @@
         & .blur {
           /* border-radius: 0 0 32px 32px; */
           background: linear-gradient(180deg, rgba(36, 34, 32, 0.00) 0%, rgba(36, 34, 32, 0.90) 100%);
-          backdrop-filter: blur(10px);
+          backdrop-filter: blur(2px);
           position: absolute;
           left: 0;
           bottom: 0;
@@ -2592,13 +2750,20 @@
         max-width: 844px;
         position: relative;
         z-index: 3;
-
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 100%;
 
         @media(max-width: 992px) {
           display: -webkit-box;
           -webkit-line-clamp: 2;
           -webkit-box-orient: vertical;
           overflow: hidden;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 100%;
 
           &.is-open {
             -webkit-line-clamp: unset;
@@ -2646,6 +2811,7 @@
 
         @media(max-width: 992px) {
           height: 500px;
+          border-radius: 16px;
         }
 
         @media(max-width: 600px) {
@@ -2733,11 +2899,20 @@
     overflow: hidden;
     display: flex;
 
+    @media(max-width: 1700px) {
+      height: 700px;
+    }
+
     @media(max-width: 992px) {
       justify-content: flex-start;
-      padding-top: 69px;
+      padding-top: 49px;
       height: 675px;
       gap: 28px;
+      
+    }
+    @media(max-width: 600px) {
+      padding-top: 20px;
+      border-radius: 16px;
     }
 
     & .donwload-banner__image {
@@ -2754,8 +2929,12 @@
         width: 100%;
 
         @media(max-width: 992px) {
-          height: 50%;
+          height: 65%;
           object-position: right bottom;
+        }
+
+        @media(max-width: 700px) {
+          height: 50%;
         }
       }
     }
@@ -2858,7 +3037,7 @@
       & .map-section__address {
         display: flex;
         align-items: center;
-        gap: 29px;
+        gap: 59px;
 
         @media(max-width: 992px) {
           flex-direction: column;
@@ -2906,7 +3085,7 @@
           position: relative;
 
           @media(max-width: 992px) {
-            padding-left: 25px;
+            padding-left: 20px;
             font-size: 14px;
             font-style: normal;
             line-height: 100%;
@@ -2921,10 +3100,13 @@
             background-color: #FF7400;
             top: 50%;
             transform: translateY(-50%);
-            left: -15px;
+            left: -25px;
 
             @media(max-width: 992px) {
               left: 0;
+              width: 5px;
+              height: 5px;
+              left: 5px;
             }
 
           }
@@ -2959,6 +3141,11 @@
 .places {
   margin-top: 112px;
   margin-bottom: 112px;
+
+  @media(max-width: 1700px) {
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
 
   @media(max-width:992px) {
     margin-top: 52px;
@@ -3066,14 +3253,20 @@
 
       @media(max-width: 1600px) {
         max-width: 100%;
-        
+
       }
+
       @media(max-width: 992px) {
         gap: 0;
       }
 
       & .sync-gallery__small {
         max-width: 440px;
+
+        @media(max-width: 1200px) {
+          max-width: 100%;
+        }
+
         & .splide__slide {
           max-width: 440px;
           width: 100%;
@@ -3089,7 +3282,7 @@
             max-width: 100%;
           }
 
-          @media(max-width: 992px) {
+          @media(max-width: 700px) {
             height: 226px;
           }
 
@@ -3110,6 +3303,9 @@
             justify-content: center;
             margin-top: 20px;
           }
+          @media(max-width: 600px) {
+            gap: 10px;
+          }
 
           & .sync-gallery__arrow {
             width: 52px;
@@ -3119,6 +3315,10 @@
             justify-content: center;
             align-items: center;
             background-color: #fff;
+            @media(max-width: 600px) {
+              width: 40px;
+              height: 40px;
+            }
           }
         }
       }
@@ -3179,6 +3379,9 @@
         gap: 26px;
         height: 83px;
         max-width: 180px;
+        @media(max-width: 600px) {
+          max-width: 120px;
+        }
 
 
 
@@ -3277,7 +3480,7 @@
 
   & .faq-inner {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
     gap: 20px;
 
@@ -3288,7 +3491,7 @@
     & .faq-left {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      /* justify-content: space-between; */
       gap: 117px;
 
       @media(max-width: 992px) {
@@ -3373,15 +3576,19 @@
             & .faq-acc__item-head__arrow {
               width: 40px;
               height: 40px;
+              min-width: 40px;
               border-radius: 50%;
               transition: all .3s ease-in;
               display: flex;
               align-items: center;
               justify-content: center;
+              padding-bottom: 2px;
 
 
               & svg {
                 transition: all .3s ease-in;
+                width: 16px;
+                height: 9px;
 
                 & path {
                   transition: all .3s ease-in;
