--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -11,7 +11,8 @@
   @media(max-width: 1200px) {
     margin-top: -107px;
   }
-   @media(max-width: 1024px) {
+
+  @media(max-width: 1024px) {
     margin-top: -80px;
   }
 
@@ -25,7 +26,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      /*filter: brightness(.5);*/
+      filter: brightness(.5);
 
       & img {
         object-fit: cover;
@@ -57,7 +58,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 6;
+    z-index: 3;
     display: flex;
     align-items: center;
 
@@ -71,7 +72,7 @@
       left: 0;
       right: 0;
       margin: 0 auto;
-      z-index: 6;
+      z-index: 2;
     }
 
     & .splide__pagination {
@@ -152,7 +153,7 @@
         max-width: 100%;
       }
 
-      & h1, h2 {
+      & h1 {
         margin-bottom: 50px;
         color: #fff;
 
@@ -442,7 +443,7 @@
             flex-direction: column-reverse;
           }
 
-          
+
 
           & .next-thumb {
             max-width: 297px;
@@ -586,7 +587,7 @@
   width: 100%;
   height: 100dvh;
   z-index: -1;
-  filter: brightness(.6);
+  filter: brightness(.5);
 
   & img {
     object-fit: cover;
@@ -648,8 +649,8 @@
         }
 
         @media(max-width: 600px) {
-          max-width: 88px;
-          height: 20px;
+          max-width: 120px;
+          height: 28px;
         }
       }
     }
@@ -658,7 +659,7 @@
       display: flex;
       flex-direction: column;
       gap: 48px;
-      max-width: 900px;
+      max-width: 859px;
 
       @media(max-width: 1750px) {
         max-width: 600px;
@@ -696,6 +697,10 @@
           font-style: normal;
           line-height: 100%
         }
+
+        @media(max-width: 600px) {
+          max-width: 295px;
+        }
       }
     }
   }
@@ -706,7 +711,7 @@
     gap: 20px;
     margin-top: 56px;
 
-    @media(max-width: 1750px) {
+    @media(max-width: 1200px) {
       grid-template-columns: repeat(2, 1fr);
     }
 
@@ -737,6 +742,7 @@
 
         @media(max-width: 1750px) {
           height: 300px;
+          padding: 20px;
         }
 
         @media(max-width: 992px) {
@@ -760,7 +766,8 @@
           align-items: center;
           justify-content: center;
 
-          @media(max-width: 992px) {
+
+          @media(max-width: 1750px) {
             width: 32px;
             height: 32px;
             right: 16px;
@@ -782,12 +789,20 @@
           line-height: 100%;
           margin-bottom: 30px;
 
+          @media(max-width: 1750px) {
+            font-size: 29px;
+          }
+
           @media(max-width: 992px) {
             font-size: 20px;
             font-style: normal;
 
             line-height: 100%;
             margin-bottom: 12px;
+          }
+
+          @media(max-width: 600px) {
+            max-width: 220px;
           }
         }
 
@@ -803,6 +818,10 @@
             font-style: normal;
             font-weight: 400;
             line-height: 100%;
+          }
+
+          @media(max-width: 600px) {
+            max-width: 220px;
           }
         }
 
@@ -836,7 +855,7 @@
   height: 125%;
   top: 0;
   margin: 0 auto;
-  z-index: 4;
+  z-index: 2;
 
   & img {
     object-fit: contain;
@@ -863,7 +882,7 @@
 
     @media(max-width: 700px) {
       flex-direction: column;
-      padding-bottom: 21px;
+      padding-bottom: 10px;
     }
 
     & .projects-navigation {
@@ -950,6 +969,11 @@
       width: 62px;
       height: 62px;
 
+      @media(max-width: 992px) {
+        width: 40px;
+        height: 40px;
+      }
+
       @media(max-width: 700px) {
         transform: translate(0);
         top: 0;
@@ -968,6 +992,11 @@
         align-items: center;
         justify-content: center;
         border-radius: 110px;
+
+        @media(max-width: 992px) {
+          width: 32px;
+          height: 32px;
+        }
 
         @media(max-width: 700px) {
           width: initial;
@@ -1040,6 +1069,10 @@
 
         @media(max-width: 992px) {
           margin-bottom: 0;
+        }
+
+        @media(max-width: 600px) {
+          max-width: 140px;
         }
       }
 
@@ -1193,6 +1226,7 @@
         font-style: normal;
         font-weight: 700;
         line-height: 90%;
+        max-width: 79%;
 
         position: absolute;
         left: 40px;
@@ -1290,7 +1324,7 @@
             @media(max-width: 700px) {
               max-width: 100%;
               left: 18px;
-              bottom: 12px;
+              bottom: 20px;
               width: 92%;
             }
 
@@ -1321,6 +1355,10 @@
 
                 @media(max-width: 1200px) {
                   margin-bottom: 12px;
+                }
+
+                @media(max-width: 600px) {
+                  gap: 20px;
                 }
 
                 & address {
@@ -1361,6 +1399,12 @@
                     height: 10px;
                     border-radius: 50%;
                     background-color: #FF7400;
+
+                    @media(max-width: 600px) {
+                      width: 5px;
+                      height: 5px;
+                      left: -8px;
+                    }
                   }
                 }
               }
@@ -1405,6 +1449,10 @@
                 gap: 39px;
                 width: 100%;
 
+              }
+
+              @media(max-width:600px) {
+                gap: 20px;
               }
 
               & .project_small_info-price {
@@ -1554,6 +1602,18 @@
   transition: transform 0.5s ease, opacity 0.5s ease;
   transform-origin: top center;
   z-index: 1;
+
+  & .project-small__name {
+    display: none;
+  }
+
+  & .project-small__arrow {
+    display: none !important;
+  }
+
+  & .project-small__tag {
+    display: none;
+  }
 }
 
 
@@ -1561,6 +1621,26 @@
   transform: translateY(0) scale(1);
   opacity: 1;
   z-index: 10;
+
+  &::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    box-shadow: 30px 34px 94px 0 rgba(0, 0, 0, 0.35);
+    display: block;
+  }
+
+  & .project-small__name {
+    display: block;
+  }
+
+  & .project-small__arrow {
+    display: flex !important;
+  }
+
+  & .project-small__tag {
+    display: flex;
+  }
 }
 
 
@@ -1594,11 +1674,16 @@
 
 .show-off {
   & .show-off__inner {
-    padding: 80px 50px 145px 80px;
+    padding: 80px 90px 145px 80px;
     border-radius: 50px;
     border: 1px solid rgba(36, 34, 32, 0.20);
     position: relative;
     overflow: hidden;
+
+    @media(max-width: 1750px) {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
 
     @media(max-width: 992px) {
       padding-top: 48px;
@@ -1659,7 +1744,7 @@
       position: relative;
       z-index: 2;
 
-      @media(max-width: 1500px) {
+      @media(max-width: 1320px) {
         flex-direction: column;
         gap: 32px;
         align-items: flex-start;
@@ -1670,15 +1755,21 @@
 
         @media(max-width: 992px) {
 
+
+
+          & svg {
+            width: 88px;
+            height: 20px;
+          }
+        }
+
+        & media(max-width: 700px) {
           display: flex;
           flex-direction: column;
           gap: 20px;
         }
 
-        & svg {
-          width: 88px;
-          height: 20px;
-        }
+
 
         & span {
           color: rgba(36, 34, 32, 0.40);
@@ -1779,11 +1870,15 @@
 
     @media(max-width: 992px) {
       border-radius: 20px;
-      padding: 48px 18px 18px 18px;
+      padding: 42px 18px 18px 18px;
     }
 
     & h2 {
       max-width: 397px;
+
+      @media(min-width: 1201px) {
+        padding-top: 50px;
+      }
     }
 
     & .partners-list {
@@ -1793,10 +1888,9 @@
       max-width: 1360px;
       width: 100%;
 
-      @media(max-width: 992px) {
+      @media(max-width: 700px) {
         gap: 2px;
-        display: flex;
-        flex-wrap: wrap;
+        grid-template-columns: repeat(2, 1fr);
       }
 
       & li {
@@ -1812,7 +1906,7 @@
         @media(max-width: 992px) {
           height: 64px;
           padding: 16px 20px;
-          width: fit-content;
+          border-radius: 10px;
         }
 
         & img {
@@ -1834,6 +1928,7 @@
 
 .special {
   margin-top: 40px;
+  margin-bottom: 20px;
 
   & .special-inner {
     border-radius: 50px;
@@ -1842,6 +1937,10 @@
     padding: 121px 50px 115px;
     position: relative;
     padding-right: 0;
+
+    @media(max-width: 1750px) {
+      padding-top: 100px;
+    }
 
     @media(max-width: 992px) {
       padding: 48px 18px;
@@ -1860,6 +1959,10 @@
 
       @media(max-width: 992px) {
         bottom: 72px;
+      }
+      @media(max-width: 600px) {
+        height: 1px;
+        bottom: 62px;
       }
     }
 
@@ -1907,6 +2010,11 @@
         margin-right: 50px;
         margin-bottom: 140px;
 
+        @media(max-width: 1150px) {
+          max-width: 100%;
+          padding-left: 50px;
+        }
+
         & .tabs-hp-content__item {
 
           flex-direction: column;
@@ -1942,6 +2050,10 @@
 
           & .hp-slider__content {
             max-width: 1062px;
+
+            @media(max-width: 1150px) {
+              max-width: 100%;
+            }
 
             & .hp-slider__slide {
               display: flex;
@@ -2066,6 +2178,10 @@
       opacity: 1;
       position: relative;
 
+      @media(max-width: 600px) {
+        width: 15px;
+        height: 15px;
+      }
 
 
       &.is-active {
@@ -2074,6 +2190,12 @@
         width: 48px;
         height: 48px;
         min-width: 48px;
+
+        @media(max-width: 600px) {
+          width: 24px;
+          height: 24px;
+          min-width: 24px;
+        }
 
         &::before {
           content: '';
@@ -2088,6 +2210,13 @@
           min-height: 48px;
           border-radius: 50%;
           background-color: #393836;
+
+          @media(max-width: 600px) {
+            width: 24px;
+            height: 24px;
+            min-height: 24px;
+            min-width: 24px;
+          }
         }
 
         &::after {
@@ -2103,12 +2232,20 @@
           min-width: 30px;
           border-radius: 50%;
           background-color: #FF7400;
+
+          @media(max-width: 600px) {
+            width: 15px;
+            height: 15px;
+            min-width: 15px;
+            min-height: 15px;
+          }
         }
       }
     }
 
     @media(max-width: 992px) {
       gap: 100px;
+      gap: 40px;
     }
   }
 }
