--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,8 +269,9 @@
 
  header {
 
-  position: relative;
-  z-index: 15;
+   position: relative;
+   z-index: 15;
+
    & .header-inner {
      padding-top: 24px;
      padding-bottom: 24px;
@@ -344,6 +345,11 @@
 
        & nav {
          position: relative;
+
+         @media(min-width: 1151px) {
+           margin-left: auto;
+           margin-right: auto;
+         }
 
          @media(max-width: 1150px) {
            margin-top: 53px;
@@ -600,6 +606,13 @@
        gap: 15px 32px;
        flex-wrap: wrap;
 
+       @media(max-width: 992px) {
+         white-space: nowrap;
+         flex-wrap: nowrap;
+         overflow-x: auto;
+         overflow-y: hidden;
+       }
+
        & li {
          & a {
            color: rgba(36, 34, 32, 0.30);
@@ -610,9 +623,36 @@
            position: relative;
            transition: color .3s ease-in;
 
+           @media(max-width: 992px) {
+             font-size: 12px;
+             font-style: normal;
+             line-height: 22px;
+           }
+
            &:hover {
              color: var(--accent-color);
            }
+
+           & span {
+             color: rgba(36, 34, 32, 0.30);
+             font-size: 18px;
+             font-style: normal;
+             font-weight: 500;
+             line-height: 22px;
+             position: relative;
+             transition: color .3s ease-in;
+
+             @media(max-width: 992px) {
+               font-size: 12px;
+               font-style: normal;
+               line-height: 22px;
+             }
+
+             &:hover {
+               color: var(--accent-color);
+             }
+           }
+
 
            &::after {
              content: '/';
@@ -622,8 +662,14 @@
              color: rgba(36, 34, 32, 0.30);
              font-size: 18px;
              font-style: normal;
-             font-weight: 400;
+             font-weight: 500;
              line-height: 22px;
+
+             @media(max-width: 992px) {
+               font-size: 12px;
+               font-style: normal;
+               line-height: 19px;
+             }
            }
          }
 
@@ -631,11 +677,19 @@
            color: #242220;
            font-size: 18px;
            font-style: normal;
-           font-weight: 400;
+           font-weight: 500;
            line-height: 22px;
-           /* 122.222% */
+
+           @media(max-width: 992px) {
+             font-size: 12px;
+             font-style: normal;
+             line-height: 22px;
+           }
          }
+
        }
+
+
      }
    }
 
@@ -646,28 +700,39 @@
            & a {
              color: rgba(255, 255, 255, 0.30);
 
+             & span {
+               color: rgba(255, 255, 255, 0.30);
+             }
+
 
              &:hover {}
 
              &::after {}
+
+
            }
 
            & span {
              color: #fff;
            }
+
          }
        }
      }
    }
  }
 
+
+
+
  .filtes-selects {
    margin-top: 50px;
    display: flex;
-   gap: 4px;
+
 
    @media(max-width: 1700px) {
      flex-wrap: wrap;
+     gap: 15px 4px;
    }
 
    @media(max-width: 992px) {
@@ -682,7 +747,7 @@
        /* text-align: center; */
        font-size: 18px;
        font-style: normal;
-       font-weight: 400;
+       font-weight: 500;
        line-height: 22px;
        margin-bottom: 8px;
      }
@@ -772,7 +837,7 @@
      color: #7C8589;
      font-size: 18px;
      font-style: normal;
-     font-weight: 400;
+     font-weight: 500;
      line-height: 22px;
      margin-bottom: 8px;
    }
@@ -1130,7 +1195,7 @@
              opacity: .5;
 
              @media(max-width: 992px) {
-               height: 24px;
+               height: 20px;
              }
 
              & svg {
@@ -1145,13 +1210,13 @@
          color: rgba(0, 0, 0, 0.70);
          font-size: 35px;
          font-style: normal;
-         font-weight: 400;
+         font-weight: 500;
          line-height: 90%;
 
          @media(Max-width: 992px) {
            font-size: 20px;
            font-style: normal;
-           font-weight: 400;
+           font-weight: 500;
            line-height: 90%;
          }
 
@@ -1303,7 +1368,7 @@
            color: rgba(36, 34, 32, 0.40);
            font-size: 18px;
            font-style: normal;
-           font-weight: 400;
+           font-weight: 500;
            line-height: 100%;
 
            @media(max-width: 992px) {
@@ -1326,7 +1391,7 @@
      padding-left: 30px;
      padding-right: 30px;
 
-     @media(max-width: 600px) {
+     @media(max-width: 992px) {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
@@ -1334,6 +1399,11 @@
        padding-left: 10px;
        padding-right: 10px;
        padding-bottom: 157px;
+     }
+
+     @media(max-width: 600px) {
+       padding-top: 80px;
+       padding-top: 10px;
      }
 
      & .footer-copy {
@@ -1356,7 +1426,7 @@
        color: rgba(36, 34, 32, 0.40);
        font-size: 18px;
        font-style: normal;
-       font-weight: 400;
+       font-weight: 500;
        line-height: 100%;
        position: relative;
        z-index: 2;
@@ -1364,7 +1434,7 @@
        @media(max-width: 600px) {
          font-size: 10px;
          font-style: normal;
-         font-weight: 400;
+         font-weight: 500;
          line-height: 100%;
 
          &:last-of-type {
@@ -1408,7 +1478,7 @@
      color: rgba(0, 0, 0, 0.70);
      font-size: 18px;
      font-style: normal;
-     font-weight: 400;
+     font-weight: 500;
      line-height: 100%;
      padding: 10px 20px;
      border-bottom: 1px solid rgba(36, 34, 32, 0.20);
@@ -1417,7 +1487,7 @@
        padding-left: 10px;
        font-size: 14px;
        font-style: normal;
-       font-weight: 400;
+       font-weight: 500;
        line-height: 100%;
      }
 
@@ -1425,13 +1495,13 @@
        color: rgba(36, 34, 32, 0.30);
        font-size: 18px;
        font-style: normal;
-       font-weight: 400;
+       font-weight: 500;
        line-height: 100%;
 
        @media(max-width: 992px) {
          font-size: 14px;
          font-style: normal;
-         font-weight: 400;
+         font-weight: 500;
          line-height: 100%;
        }
      }
@@ -1516,7 +1586,7 @@
 
  }
 
- 
+
 
  .modal {
    position: fixed;
@@ -1841,7 +1911,7 @@
 
 
  .catalog-images__slider {
-   height: 100%;
+   width: 100%;
    height: 100%;
 
    & .splide__track {
@@ -1849,6 +1919,10 @@
      height: 100%;
      & height: 100%;
      height: 100%;
+     /* 
+     & .splide__list {
+       transform: translateX(0) !important;
+     } */
 
      & .splide__slide {
        width: 100%;
@@ -1856,6 +1930,7 @@
      }
    }
  }
+
 
 
 
